# ner-annotation-app

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: out.jsonl  pyproject.toml
backend/ner_annotator/: __init__.py  __main__.py  main.py  models.py  mongo.py  session.py  store.py  workspace.py
backend/tests/: test_multiuser.py  test_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  colors.ts  index.css  session.ts  store.ts  types.ts
frontend/src/components/: CommentPanel.tsx  DocNavigator.tsx  EntityCard.tsx  EntityPanel.tsx  KeyboardHelp.tsx  LoginScreen.tsx  MentionChip.tsx  MentionMenu.tsx  NameScreen.tsx  SourceSelector.tsx  TagPrompt.tsx  TextPanel.tsx  TopBar.tsx  UidPrompt.tsx  UploadScreen.tsx
frontend/src/hooks/: useKeyboard.ts
frontend/src/lib/: direction.test.ts  direction.ts  matches.test.ts  matches.ts  mentions.test.ts  mentions.ts  offsets.test.ts  offsets.ts  segments.test.ts  segments.ts
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
sample/: input.jsonl
sample/annotations.jsonl.users/: mitchell.jsonl  mitchell.prefs.json  users.json
