[project]
name = "ner-annotator"
version = "0.1.0"
description = "Web annotation app for entity-clustering NER (entity = type + reference mentions)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
ner-annotator = "ner_annotator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ner_annotator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
